installed react testing lib

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "\"AKHIL MISHRA\"",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
     "parcel": "^2.11.0",
     "postcss": "^8.4.35",
     "process": "^0.11.10",
